--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lit": "^2.0.2",
+    "lit-element": "^4.0.4",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
